--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<div class="library">
+			<div class="book" id="book-01">
+				<p class="title">Title</p>
+				<p class="author">Author</p>
+				<button class="btn-delete">Delete</button>
+			</div>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
