--- a/index.html
+++ b/index.html
@@ -7,13 +7,45 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div class="library">
-			<div class="book" id="book-01">
-				<p class="title">Title</p>
-				<p class="author">Author</p>
-				<button class="btn-delete">Delete</button>
+		<div class="main-content">
+			<div class="library">
+				<div class="book" id="book-01">
+					<p class="title">Title</p>
+					<p class="author">Author</p>
+					<button class="btn-delete">Delete</button>
+				</div>
 			</div>
+			<div class="book-list">
+				<button class="btn-display-book-list">Display books in a list</button>
+			</div>
+			<ul>
+				Current books:
+			</ul>
 		</div>
+
+		<div class="sidebar">
+			<div class="new-book-header">Add a new book to the library</div>
+			<form action="/">
+				<!-- form stuff here -->
+				<div>
+					<label for="new-title">Title:</label
+					><input type="text" name="new-title" id="new-title" />
+				</div>
+
+				<div>
+					<label for="new-author">Author:</label
+					><input type="text" name="new-author" id="new-author" />
+				</div>
+
+				<div>
+					<input type="checkbox" name="new-is-read" id="new-is-read" />
+					<label for="new-is-read">Have you already read this book?</label>
+				</div>
+
+				<div><button type="submit" class="btn-add">Add book</button></div>
+			</form>
+		</div>
+
 		<script src="script.js"></script>
 	</body>
 </html>
