build UI, refactor to display on UI... many bugs to fix

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -7,6 +7,29 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<div class="container">
+			<div class="spot" id="top-left"></div>
+			<div class="spot" id="top-mid"></div>
+			<div class="spot" id="top-right"></div>
+			<div class="spot" id="mid-left"></div>
+			<div class="spot" id="mid-mid"></div>
+			<div class="spot" id="mid-right"></div>
+			<div class="spot" id="btm-left"></div>
+			<div class="spot" id="btm-mid"></div>
+			<div class="spot" id="btm-right"></div>
+		</div>
+		<h3 id="info-text"></h3>
+		<div>
+			<a href="https://www.flaticon.com/free-icons/close" title="close icons"
+				>Close icons created by ariefstudio - Flaticon</a
+			>
+		</div>
+		<div>
+			<a href="https://www.flaticon.com/free-icons/o" title="o icons"
+				>O icons created by Freepik - Flaticon</a
+			>
+		</div>
+
 		<script src="script.js"></script>
 	</body>
 </html>
